<resources>
    <string name="action_settings">Settings</string>
    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dictum lorem ac leo tincidunt varius. Donec lacinia elementum lobortis. Nulla pellentesque cursus sem. Aliquam vestibulum lacinia metus, ac faucibus nunc fringilla a. Nullam mauris lorem, pharetra vitae mollis in, gravida a mi. Sed eu elit vitae lorem vestibulum volutpat eget blandit tortor. Duis dignissim porta dolor, ut porttitor lectus pretium vitae.  Phasellus quis augue ante. Nam tempus egestas consectetur. Praesent nec placerat nisi, non malesuada dolor. Duis malesuada semper lorem, nec feugiat nisl. Nulla facilisi. Sed aliquam ex ut turpis malesuada dignissim. Nam risus mi, dapibus maximus nisl ac, efficitur suscipit ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec malesuada nisl eget faucibus mollis. Nam sit amet mauris a metus euismod porttitor et sed mi. Nunc vel vehicula arcu, eu lacinia odio. Fusce id lacus vel dui blandit maximus id eget neque.  Sed eu porta diam. Nunc vitae egestas diam. Donec semper hendrerit laoreet. Aliquam quis aliquam nulla. Aenean euismod lacus sed pretium scelerisque. Suspendisse mollis arcu at ligula pulvinar, nec elementum velit fermentum. Sed sed mollis ligula, vel eleifend metus. Sed magna metus, tempus ut bibendum at, aliquam at nisi. Integer nec fringilla mauris, vel viverra augue. Morbi eu mi mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.  Proin molestie ante nec tristique finibus. In hac habitasse platea dictumst. Maecenas sed risus condimentum, feugiat velit ac, dictum erat. Curabitur pharetra ac nulla sed lacinia. Curabitur rutrum dolor vestibulum magna ultrices congue ac sed libero. Nam semper mi a neque ultricies commodo. In condimentum in odio in porttitor. Suspendisse maximus vestibulum nunc, vel gravida dui fermentum eu. Morbi sed orci augue. Praesent dolor justo, cursus sit amet ex et, posuere mattis lorem. Donec in efficitur orci. Nam semper odio a interdum aliquet. Vivamus vitae luctus purus, in fermentum diam. Pellentesque quis orci vitae est placerat faucibus. Maecenas non gravida ipsum, sit amet ultrices sem. Phasellus fringilla ultrices erat, vel aliquam sapien varius ac.  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam porta semper sapien. Pellentesque volutpat porta sapien, ut tristique metus. In hac habitasse platea dictumst. Aenean pharetra molestie dapibus. Nunc sed dolor elit. Quisque eget enim non tellus volutpat mollis a id dolor. Aenean sit amet sem sem. Nunc viverra efficitur lorem. Quisque quis metus dictum, mattis ante non, pellentesque sapien. Integer quis lectus feugiat, consectetur nulla quis, viverra nulla. Curabitur eu sodales nisl. Morbi non enim pellentesque, lobortis est id, dignissim mauris. Nulla et tempor lectus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dictum lorem ac leo tincidunt varius. Donec lacinia elementum lobortis. Nulla pellentesque cursus sem. Aliquam vestibulum lacinia metus, ac faucibus nunc fringilla a. Nullam mauris lorem, pharetra vitae mollis in, gravida a mi. Sed eu elit vitae lorem vestibulum volutpat eget blandit tortor. Duis dignissim porta dolor, ut porttitor lectus pretium vitae.  Phasellus quis augue ante. Nam tempus egestas consectetur. Praesent nec placerat nisi, non malesuada dolor. Duis malesuada semper lorem, nec feugiat nisl. Nulla facilisi. Sed aliquam ex ut turpis malesuada dignissim. Nam risus mi, dapibus maximus nisl ac, efficitur suscipit ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec malesuada nisl eget faucibus mollis. Nam sit amet mauris a metus euismod porttitor et sed mi. Nunc vel vehicula arcu, eu lacinia odio. Fusce id lacus vel dui blandit maximus id eget neque.  Sed eu porta diam. Nunc vitae egestas diam. Donec semper hendrerit laoreet. Aliquam quis aliquam nulla. Aenean euismod lacus sed pretium scelerisque. Suspendisse mollis arcu at ligula pulvinar, nec elementum velit fermentum. Sed sed mollis ligula, vel eleifend metus. Sed magna metus, tempus ut bibendum at, aliquam at nisi. Integer nec fringilla mauris, vel viverra augue. Morbi eu mi mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.  Proin molestie ante nec tristique finibus. In hac habitasse platea dictumst. Maecenas sed risus condimentum, feugiat velit ac, dictum erat. Curabitur pharetra ac nulla sed lacinia. Curabitur rutrum dolor vestibulum magna ultrices congue ac sed libero. Nam semper mi a neque ultricies commodo. In condimentum in odio in porttitor. Suspendisse maximus vestibulum nunc, vel gravida dui fermentum eu. Morbi sed orci augue. Praesent dolor justo, cursus sit amet ex et, posuere mattis lorem. Donec in efficitur orci. Nam semper odio a interdum aliquet. Vivamus vitae luctus purus, in fermentum diam. Pellentesque quis orci vitae est placerat faucibus. Maecenas non gravida ipsum, sit amet ultrices sem. Phasellus fringilla ultrices erat, vel aliquam sapien varius ac.  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam porta semper sapien. Pellentesque volutpat porta sapien, ut tristique metus. In hac habitasse platea dictumst. Aenean pharetra molestie dapibus. Nunc sed dolor elit. Quisque eget enim non tellus volutpat mollis a id dolor. Aenean sit amet sem sem. Nunc viverra efficitur lorem. Quisque quis metus dictum, mattis ante non, pellentesque sapien. Integer quis lectus feugiat, consectetur nulla quis, viverra nulla. Curabitur eu sodales nisl. Morbi non enim pellentesque, lobortis est id, dignissim mauris. Nulla et tempor lectus.</string>
    <string name="MENU_FEEDBACK">反馈</string>
    <string name="action_add_cookbook">创建烹饪书</string>
    <string name="action_add_recipe">保存</string>
    <string name="action_add_social_recipe">创建食谱</string>
    <string name="action_crop">剪裁</string>
    <string name="action_delete_from_cookbook">删除</string>
    <string name="action_edit_cookbook">编辑烹饪书</string>
    <string name="action_edit_profile">编辑个人资料</string>
    <string name="action_edit_recipe">编辑</string>
    <string name="action_move_to_cookbook">移至烹饪书</string>
    <string name="action_report_user">举报用户</string>
    <string name="action_search">查找</string>
    <string name="actionbar_text_save">保存</string>
    <string name="actionbar_text_set">确定</string>
    <string name="active_time">活跃备制</string>
    <string name="activity_title_licenses">许可归属声明</string>
    <string name="add_recipe">创建食谱</string>
    <string name="additional_comment_images_count">+%d</string>
    <string name="aggregated_shopping_list_title">购物单</string>
    <string name="already_on_profile">您已进入此用户主页</string>
    <string name="app_name">UStory</string>
    <string name="article_by_prefix">%1$s</string>
    <string name="article_posted_on">发表于 %1$s</string>
    <string name="article_source_prefix">来源: %s</string>
    <string name="available_at">在此可购</string>
    <string name="based_on_ratings">%1$s评分</string>
    <string name="btn_comment_read">阅读</string>
    <string name="btn_comment_write">撰写</string>
    <string name="bubble_dialog_back_button">删除</string>
    <string name="card_view_delete_draft">删除草稿</string>
    <string name="category_all_label">全部</string>
    <string name="category_calories">卡路里</string>
    <string name="category_duration">所需时间</string>
    <string name="category_ingredient">食材</string>
    <string name="category_meal_ingredient_beef">牛肉</string>
    <string name="category_meal_ingredient_chicken">禽肉</string>
    <string name="category_meal_ingredient_fish">海味</string>
    <string name="category_meal_ingredient_glutenfree">无谷胶</string>
    <string name="category_meal_ingredient_lacfree">无乳糖</string>
    <string name="category_meal_ingredient_pig">猪肉</string>
    <string name="category_meal_ingredient_vegan">纯素食</string>
    <string name="category_meal_ingredient_veggy">素食</string>
    <string name="category_meal_time_breakfast">早餐</string>
    <string name="category_meal_time_dessert">甜点</string>
    <string name="category_meal_time_dinner">主菜</string>
    <string name="category_meal_time_drink">饮料</string>
    <string name="category_meal_time_snack">小吃</string>
    <string name="category_meal_time_starter">头盘</string>
    <string name="category_recipe_package">食谱组别</string>
    <string name="category_title">分类</string>
    <string name="comment_answer_translated">翻译</string>
    <string name="comment_detail_title">回复评论</string>
    <string name="comment_image_gallery_activity_title">图库 (%1$s)</string>
    <string name="comment_images_header">图库 (%1$s)</string>
    <string name="comment_list_image_gallery_title">图库</string>
    <string name="comment_menu_action_report">汇报</string>
    <string name="comment_picture_limit_reached">每个评论只能附带10张图片。</string>
    <string name="comment_pictures_text">上传图片</string>
    <string name="comment_profile_picture_tooltip">说“茄子”，上传你的个人头像吧！</string>
    <string name="comment_recipe">与他人分享你的想法</string>
    <string name="comment_replies_loaded_failed">无法加载回复。</string>
    <string name="comment_reply">回复</string>
    <string name="comment_save_successful_no_image">谢谢你的评论！</string>
    <string name="comment_save_successful_with_image">谢谢你的评论！你的图片正在处理中，请稍等片刻！</string>
    <string name="comment_see_previous_answer">查看前条回复</string>
    <string name="comments_header">评论</string>
    <string name="comments_text">评论</string>
    <string name="community_removal_message">我们的新变化！\n我们会重新调整厨房故事应用。从现在起，用户个人的食谱将不会出现在“美食社区”中。现在查看如何保存自己已上传的食谱。\n</string>
    <string name="community_removal_message_action">点击查看更多</string>
    <string name="contacts_permission_rationale">您尚未开放“通讯录”权限，无法使用谷歌登录</string>
    <string name="cookbook_chooser_full_screen_title">将这道食谱放到你的个人烹饪书里吧</string>
    <string name="cookbook_detail_list_no_result">此烹饪书中尚无任何食谱。</string>
    <string name="cookbook_empty_text">太棒了！你正在逐渐成为一位烹饪书的作者！</string>
    <string name="cookbook_empty_tip">你的手册还空空如也，在食谱页面中点击收藏按钮来填满它吧。</string>
    <string name="cookbook_list_empty_button">开始编辑你的烹饪手册</string>
    <string name="cookbook_list_empty_text">您尚未创建任何烹饪书。</string>
    <string name="cookbook_list_empty_tip">烹饪手册能帮助你更好归类食谱。</string>
    <string name="cooked_it_rate_it">做过了？来评分！</string>
    <string name="cooked_this_recipe">做过这道菜？</string>
    <string name="cooking_mode_disabled_explanation">已禁用烹饪模式！</string>
    <string name="cooking_mode_enabled_explanation">已启动烹饪模式！在烹饪模式期间，您的屏幕将不会自动关闭。</string>
    <string name="crop_image_menu_crop">裁剪</string>
    <string name="crop_image_menu_rotate_left">逆时针旋转</string>
    <string name="crop_image_menu_rotate_right">顺时针旋转</string>
    <string name="data_privacy_agreement_question">厨房故事是否可以收集匿名数据用于改善应用程序？</string>
    <string name="intro_screen_btn_continue">我是新用户</string>
    <string name="intro_screen_btn_skip">我已注册过</string>
    <string name="intro_screen_log_in">登录</string>
    <string name="intro_screen_sign_up">注册</string>
    <string name="intro_screen_skip">跳过</string>
    <string name="intro_screen_welcome">欢迎</string>
    <string name="navigation_about_us">关于我们</string>
    <string name="navigation_cooking_tips">小贴士</string>
    <string name="navigation_my_recipes">我的主页</string>
    <string name="navigation_recipes">主页</string>
    <string name="navigation_search_categories">分类</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_shopping_list">购物单</string>
</resources>