<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false">

    <TextureView
        android:id="@+id/bg_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/welcome_text"
        style="@style/Font.IntroScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="@dimen/intro_screen_title_padding_top"
        android:text="@string/intro_screen_welcome"/>

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/intro_screen_ks_image_padding_bottom"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/intro_screen_ks_image_padding_top"
            android:src="@drawable/ks_logo_white"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_i_am_new"
                style="@style/ButtonStyleBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/intro_screen_btn_continue"/>

            <Button
                android:id="@+id/btn_been_here"
                style="@style/ButtonStyleBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/intro_screen_root_buttons_margin_bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/intro_screen_btn_skip"/>

            <LinearLayout
                android:id="@+id/page_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/intro_screen_page_indicator_margin_bottom"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/intro_screen_pager_buttons_margin_bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ButtonStyleBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/intro_screen_sign_up"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyleBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/intro_screen_log_in"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_skip"
        style="@style/ButtonStyleFlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/intro_screen_skip"
        android:visibility="gone"/>
</RelativeLayout>
